@startuml
class Pizza {
    prepare(): void
    bake(): void
    cut(): void
    box(): void
}

class CheesePizza {
}

class GreekPizza {
}

class OrderPizza {
}

class PizzaStore{
}

CheesePizza --|> Pizza
GreekPizza --|> Pizza

OrderPizza ..> Pizza
OrderPizza ..> CheesePizza
OrderPizza ..> GreekPizza

PizzaStore ..> OrderPizza
@enduml